<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>org.eppic-web</groupId>
	<artifactId>eppic</artifactId>
	<version>3.3.10-SNAPSHOT</version>
	<packaging>pom</packaging>

	<modules>
		<module>eppic-model</module>
		<module>eppic-cli</module>
		<module>eppic-dbtools</module>
		<module>eppic-rest</module>
		<module>eppic-util</module>
	</modules>

	<name>eppic</name>
	<url>http://www.eppic-web.org</url>
	<description>Evolutionary Protein-Protein Interface Classifier</description>

	<scm>
		<url>https://github.com/eppic-team/eppic</url>
		<connection>scm:git:https://github.com/eppic-team/eppic.git</connection>
  </scm>

	<properties>
		<java.version>17</java.version>
		<slf4j.version>1.7.22</slf4j.version>
		<log4j.version>2.17.1</log4j.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<jgrapht.version>1.0.1</jgrapht.version>
		<biojava.version>7.1.1</biojava.version>
	</properties>

	<build>
		<plugins>
			<plugin>
				<artifactId>maven-scm-plugin</artifactId>
				<version>1.8.1</version>
				<configuration>
					<tag>${project.artifactId}-${project.version}</tag>
				</configuration>
			</plugin>
		</plugins>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-shade-plugin</artifactId>
					<version>2.2</version>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>

	<repositories>
		<repository>
			<id>snapshots-repo</id>
			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
			<snapshots><enabled>true</enabled></snapshots>
		</repository>
	</repositories>

</project>
